--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ body {
     padding-top: 0;
     padding-bottom: 0;
     height: 100%;
-    background:  url("../images/bac02.jpg");
+    background:  url("../images/hope.jpg");
     background-repeat: no-repeat;
     background-position: center top;
     background-size: cover;
